--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -22,6 +24,7 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "chai": "^4.1.2",
+    "mockjs": "^1.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
